Fix spacing for pagination buttons

--- a/src/components/Contents/style/PageEntire.css
+++ b/src/components/Contents/style/PageEntire.css
@@ -3,5 +3,12 @@
     height: 4rem;
     display: flex;
     justify-content: space-between;
+}
+
+#page-button-list {
+    width: 21.6rem;
+    height: 100%;
+    display: flex;
     list-style: none;
+    gap: 0.4rem;
 }
